[service] 优化 KubernetesClusterStatisticsService